--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon --ignore \"./data\" server.js"
+    "dev": "nodemon --ignore \"./data\" --env-file=.env server.js"
   },
   "author": "Me",
   "dependencies": {
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "cryptr": "^6.0.3",
     "express": "^4.18.1",
+    "mongodb": "^6.16.0",
     "run": "^1.4.0"
   }
 }
